refactor: 优化国际化消息编码配置
- 将 messages.encoding 的注释从"设置消息编码"改为"国际化消息编码"
-优化了 application.yml 文件中的配置项注释，使其更加清晰

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
     locale: zh_CN # 设置国际化默认语言环境(用于spring-boot-starter-validation国际化)
     locale-resolver: fixed # 使用固定区域设置(用于spring-boot-starter-validation国际化)
   messages:
-    encoding: UTF-8 # 设置消息编码
+    encoding: UTF-8 # 国际化消息编码
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss # 日期格式
     time-zone: Asia/Shanghai # 日期格式化时区
