--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,12 @@
         <!-- spring-boot结束 -->
 
         <!-- core开始 -->
+        <!-- core-json -->
+        <dependency>
+            <groupId>cn.zhaofd</groupId>
+            <artifactId>core-json</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <!-- core-spring-web -->
         <dependency>
             <groupId>cn.zhaofd</groupId>
