--- a/src/main/resources/application-prod.yml.yml
+++ b/src/main/resources/application-prod.yml.yml
@@ -19,6 +19,7 @@ spring:
       validation-timeout: 5000 # 验证查询超时时间 (毫秒)，默认 5000
   jpa:
     show-sql: false # 是否开启sql的log，默认为:false
+    open-in-view: false # 视图需要的数据（尤其是懒加载关联）在整个HTTP请求处理周期中是否保持打开状态，在视图层访问懒加载对象会触发额外的数据库查询
   cache:
     type: redis # 缓存类型
     redis:
@@ -36,7 +37,7 @@ spring:
       timeout: 10000ms # 连接超时时间（毫秒）
       lettuce:
         pool:
-          max-active: 8 # 连接池最大连接数（使用负值表示没有限制，默认为8）
+          max-active: 200 # 连接池最大连接数（使用负值表示没有限制，默认为8）
           max-wait: -1ms # 连接池最大阻塞等待时间（使用负值表示没有限制，默认为-1ms）
           max-idle: 8 # 连接池中的最大空闲连接（使用负值表示没有限制，默认为8）
           min-idle: 1 # 连接池中的最小空闲连接（认为0）
