--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,12 @@
             <version>9.3.0</version>
             <scope>runtime</scope>
         </dependency>
+        <!-- redis连接池依赖 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+            <version>2.12.1</version>
+        </dependency>
     </dependencies>
 
     <build>
