--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -37,7 +37,8 @@ spring:
       timeout: 10000ms # 连接超时时间（毫秒）
       lettuce:
         pool:
-          max-active: 200 # 连接池最大连接数（使用负值表示没有限制，默认为8）
+          enabled: true # 是否启用连接池
+          max-active: 128 # 连接池最大连接数（使用负值表示没有限制，默认为8）
           max-wait: -1ms # 连接池最大阻塞等待时间（使用负值表示没有限制，默认为-1ms）
           max-idle: 8 # 连接池中的最大空闲连接（使用负值表示没有限制，默认为8）
-          min-idle: 1 # 连接池中的最小空闲连接（认为0）
+          min-idle: 4 # 连接池中的最小空闲连接（认为0）
