--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,7 @@
             <version>9.3.0</version>
             <scope>runtime</scope>
         </dependency>
-        <!-- redis连接池依赖 -->
+        <!-- redis连接池启用依赖 -->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-pool2</artifactId>
