--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,12 @@
             <artifactId>core-spring-jpa</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!-- core-spring-redis -->
+        <dependency>
+            <groupId>cn.zhaofd</groupId>
+            <artifactId>core-spring-redis</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <!-- core结束 -->
 
         <!-- mysql数据库连接 -->
