--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -6,7 +6,7 @@ spring:
     driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://192.168.0.10:3306/demo?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf8&allowPublicKeyRetrieval=true&useSSL=false
     username: root
-    password: tobe2020FT
+    password: pwd@123QWE
     hikari: # HikariCP连接池(spring boot默认连接池)
       connection-timeout: 30000 # 连接超时时间 (毫秒)，默认 30000 (30秒)
       idle-timeout: 600000 # 空闲连接超时时间 (毫秒)，默认 600000 (10分钟)
@@ -32,7 +32,7 @@ spring:
     redis:
       host: 192.168.0.10 # Redis服务器地址
       port: 6379 # Redis服务器连接端口（默认为6379）
-      password: pwd@3kzjPT # Redis服务器连接密码
+      password: pwd@123QWE # Redis服务器连接密码
       database: 0  # Redis数据库索引（默认为0）
       timeout: 10000ms # 连接超时时间（毫秒）
       lettuce:
